src/main/gen/org/yalang/parser/YaParser.java
// This is a generated file. Not intended for manual editing.
package org.yalang.parser;

import com.intellij.lang.PsiBuilder;
import com.intellij.lang.PsiBuilder.Marker;
import static org.yalang.psi.YaTypes.*;
import static com.intellij.lang.parser.GeneratedParserUtilBase.*;
import com.intellij.psi.tree.IElementType;
import com.intellij.lang.ASTNode;
import com.intellij.psi.tree.TokenSet;
import com.intellij.lang.PsiParser;
import com.intellij.lang.LightPsiParser;

@SuppressWarnings({"SimplifiableIfStatement", "UnusedAssignment"})
public class YaParser implements PsiParser, LightPsiParser {

  public ASTNode parse(IElementType t, PsiBuilder b) {
    parseLight(t, b);
    return b.getTreeBuilt();
  }

  public void parseLight(IElementType t, PsiBuilder b) {
    boolean r;
    b = adapt_builder_(t, b, this, null);
    Marker m = enter_section_(b, 0, _COLLAPSE_, null);
    if (t == AND_EXPR) {
      r = and_expr(b, 0);
    }
    else if (t == AND_TEST) {
      r = and_test(b, 0);
    }
    else if (t == ANNASSIGN) {
      r = annassign(b, 0);
    }
    else if (t == ARGLIST) {
      r = arglist(b, 0);
    }
    else if (t == ARGUMENT) {
      r = argument(b, 0);
    }
    else if (t == ARITH_EXPR) {
      r = arith_expr(b, 0);
    }
    else if (t == ASSERT_STMT) {
      r = assert_stmt(b, 0);
    }
    else if (t == ASYNC_FUNCDEF) {
      r = async_funcdef(b, 0);
    }
    else if (t == ASYNC_STMT) {
      r = async_stmt(b, 0);
    }
    else if (t == ATOM) {
      r = atom(b, 0);
    }
    else if (t == ATOM_EXPR) {
      r = atom_expr(b, 0);
    }
    else if (t == AUGASSIGN) {
      r = augassign(b, 0);
    }
    else if (t == BREAK_STMT) {
      r = break_stmt(b, 0);
    }
    else if (t == CLASSDEF) {
      r = classdef(b, 0);
    }
    else if (t == COMP_FOR) {
      r = comp_for(b, 0);
    }
    else if (t == COMP_IF) {
      r = comp_if(b, 0);
    }
    else if (t == COMP_ITER) {
      r = comp_iter(b, 0);
    }
    else if (t == COMP_OP) {
      r = comp_op(b, 0);
    }
    else if (t == COMPARISON) {
      r = comparison(b, 0);
    }
    else if (t == COMPOUND_STMT) {
      r = compound_stmt(b, 0);
    }
    else if (t == CONTINUE_STMT) {
      r = continue_stmt(b, 0);
    }
    else if (t == DECORATED) {
      r = decorated(b, 0);
    }
    else if (t == DECORATOR) {
      r = decorator(b, 0);
    }
    else if (t == DECORATORS) {
      r = decorators(b, 0);
    }
    else if (t == DEL_STMT) {
      r = del_stmt(b, 0);
    }
    else if (t == DICTORSETMAKER) {
      r = dictorsetmaker(b, 0);
    }
    else if (t == DOTTED_AS_NAME) {
      r = dotted_as_name(b, 0);
    }
    else if (t == DOTTED_AS_NAMES) {
      r = dotted_as_names(b, 0);
    }
    else if (t == DOTTED_NAME) {
      r = dotted_name(b, 0);
    }
    else if (t == ENCODING_DECL) {
      r = encoding_decl(b, 0);
    }
    else if (t == EVAL_INPUT) {
      r = eval_input(b, 0);
    }
    else if (t == EXCEPT_CLAUSE) {
      r = except_clause(b, 0);
    }
    else if (t == EXPR) {
      r = expr(b, 0);
    }
    else if (t == EXPR_STMT) {
      r = expr_stmt(b, 0);
    }
    else if (t == EXPRLIST) {
      r = exprlist(b, 0);
    }
    else if (t == FACTOR) {
      r = factor(b, 0);
    }
    else if (t == FILE_INPUT) {
      r = file_input(b, 0);
    }
    else if (t == FLOW_STMT) {
      r = flow_stmt(b, 0);
    }
    else if (t == FOR_STMT) {
      r = for_stmt(b, 0);
    }
    else if (t == FUNCDEF) {
      r = funcdef(b, 0);
    }
    else if (t == GLOBAL_STMT) {
      r = global_stmt(b, 0);
    }
    else if (t == IF_STMT) {
      r = if_stmt(b, 0);
    }
    else if (t == IMPORT_AS_NAME) {
      r = import_as_name(b, 0);
    }
    else if (t == IMPORT_AS_NAMES) {
      r = import_as_names(b, 0);
    }
    else if (t == IMPORT_FROM) {
      r = import_from(b, 0);
    }
    else if (t == IMPORT_NAME) {
      r = import_name(b, 0);
    }
    else if (t == IMPORT_STMT) {
      r = import_stmt(b, 0);
    }
    else if (t == LAMBDEF) {
      r = lambdef(b, 0);
    }
    else if (t == LAMBDEF_NOCOND) {
      r = lambdef_nocond(b, 0);
    }
    else if (t == NONLOCAL_STMT) {
      r = nonlocal_stmt(b, 0);
    }
    else if (t == NOT_TEST) {
      r = not_test(b, 0);
    }
    else if (t == OR_TEST) {
      r = or_test(b, 0);
    }
    else if (t == PARAMETERS) {
      r = parameters(b, 0);
    }
    else if (t == PASS_STMT) {
      r = pass_stmt(b, 0);
    }
    else if (t == POWER) {
      r = power(b, 0);
    }
    else if (t == PROPERTY) {
      r = property(b, 0);
    }
    else if (t == RAISE_STMT) {
      r = raise_stmt(b, 0);
    }
    else if (t == RETURN_STMT) {
      r = return_stmt(b, 0);
    }
    else if (t == SHIFT_EXPR) {
      r = shift_expr(b, 0);
    }
    else if (t == SIMPLE_STMT) {
      r = simple_stmt(b, 0);
    }
    else if (t == SINGLE_INPUT) {
      r = single_input(b, 0);
    }
    else if (t == SLICEOP) {
      r = sliceop(b, 0);
    }
    else if (t == SMALL_STMT) {
      r = small_stmt(b, 0);
    }
    else if (t == STAR_EXPR) {
      r = star_expr(b, 0);
    }
    else if (t == STMT) {
      r = stmt(b, 0);
    }
    else if (t == SUBSCRIPT) {
      r = subscript(b, 0);
    }
    else if (t == SUBSCRIPTLIST) {
      r = subscriptlist(b, 0);
    }
    else if (t == SUITE) {
      r = suite(b, 0);
    }
    else if (t == SYNC_COMP_FOR) {
      r = sync_comp_for(b, 0);
    }
    else if (t == TERM) {
      r = term(b, 0);
    }
    else if (t == TEST) {
      r = test(b, 0);
    }
    else if (t == TEST_NOCOND) {
      r = test_nocond(b, 0);
    }
    else if (t == TESTLIST) {
      r = testlist(b, 0);
    }
    else if (t == TESTLIST_COMP) {
      r = testlist_comp(b, 0);
    }
    else if (t == TESTLIST_STAR_EXPR) {
      r = testlist_star_expr(b, 0);
    }
    else if (t == TFPDEF) {
      r = tfpdef(b, 0);
    }
    else if (t == TRAILER) {
      r = trailer(b, 0);
    }
    else if (t == TRY_STMT) {
      r = try_stmt(b, 0);
    }
    else if (t == TYPEDARGSLIST) {
      r = typedargslist(b, 0);
    }
    else if (t == VARARGSLIST) {
      r = varargslist(b, 0);
    }
    else if (t == VFPDEF) {
      r = vfpdef(b, 0);
    }
    else if (t == WHILE_STMT) {
      r = while_stmt(b, 0);
    }
    else if (t == WITH_ITEM) {
      r = with_item(b, 0);
    }
    else if (t == WITH_STMT) {
      r = with_stmt(b, 0);
    }
    else if (t == XOR_EXPR) {
      r = xor_expr(b, 0);
    }
    else if (t == YIELD_ARG) {
      r = yield_arg(b, 0);
    }
    else if (t == YIELD_EXPR) {
      r = yield_expr(b, 0);
    }
    else if (t == YIELD_STMT) {
      r = yield_stmt(b, 0);
    }
    else {
      r = parse_root_(t, b, 0);
    }
    exit_section_(b, 0, m, t, r, true, TRUE_CONDITION);
  }

  protected boolean parse_root_(IElementType t, PsiBuilder b, int l) {
    return yaFile(b, l + 1);
  }

  /* ********************************************************** */
  // shift_expr ('&' shift_expr)*
  public static boolean and_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AND_EXPR, "<and expr>");
    r = shift_expr(b, l + 1);
    r = r && and_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // ('&' shift_expr)*
  private static boolean and_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!and_expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "and_expr_1", c)) break;
    }
    return true;
  }

  // '&' shift_expr
  private static boolean and_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AND);
    r = r && shift_expr(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // not_test (AND_KEYWORD not_test)*
  public static boolean and_test(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_test")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, AND_TEST, "<and test>");
    r = not_test(b, l + 1);
    r = r && and_test_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (AND_KEYWORD not_test)*
  private static boolean and_test_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_test_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!and_test_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "and_test_1", c)) break;
    }
    return true;
  }

  // AND_KEYWORD not_test
  private static boolean and_test_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "and_test_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, AND_KEYWORD);
    r = r && not_test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ':' test ['=' test]
  public static boolean annassign(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annassign")) return false;
    if (!nextTokenIs(b, COLON)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, COLON);
    r = r && test(b, l + 1);
    r = r && annassign_2(b, l + 1);
    exit_section_(b, m, ANNASSIGN, r);
    return r;
  }

  // ['=' test]
  private static boolean annassign_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annassign_2")) return false;
    annassign_2_0(b, l + 1);
    return true;
  }

  // '=' test
  private static boolean annassign_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "annassign_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EQ);
    r = r && test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // argument (',' argument)*  [',']
  public static boolean arglist(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arglist")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGLIST, "<arglist>");
    r = argument(b, l + 1);
    r = r && arglist_1(b, l + 1);
    r = r && arglist_2(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (',' argument)*
  private static boolean arglist_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arglist_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arglist_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arglist_1", c)) break;
    }
    return true;
  }

  // ',' argument
  private static boolean arglist_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arglist_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && argument(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [',']
  private static boolean arglist_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arglist_2")) return false;
    consumeToken(b, ",");
    return true;
  }

  /* ********************************************************** */
  // test [comp_for] |
  //             test '=' test |
  //             '**' test |
  //             '*' test
  public static boolean argument(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARGUMENT, "<argument>");
    r = argument_0(b, l + 1);
    if (!r) r = argument_1(b, l + 1);
    if (!r) r = argument_2(b, l + 1);
    if (!r) r = argument_3(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // test [comp_for]
  private static boolean argument_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = test(b, l + 1);
    r = r && argument_0_1(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // [comp_for]
  private static boolean argument_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_0_1")) return false;
    comp_for(b, l + 1);
    return true;
  }

  // test '=' test
  private static boolean argument_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = test(b, l + 1);
    r = r && consumeToken(b, EQ);
    r = r && test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '**' test
  private static boolean argument_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, EXP);
    r = r && test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '*' test
  private static boolean argument_3(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "argument_3")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, MULT);
    r = r && test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // term (('+'|'-') term)*
  public static boolean arith_expr(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arith_expr")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ARITH_EXPR, "<arith expr>");
    r = term(b, l + 1);
    r = r && arith_expr_1(b, l + 1);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // (('+'|'-') term)*
  private static boolean arith_expr_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arith_expr_1")) return false;
    while (true) {
      int c = current_position_(b);
      if (!arith_expr_1_0(b, l + 1)) break;
      if (!empty_element_parsed_guard_(b, "arith_expr_1", c)) break;
    }
    return true;
  }

  // ('+'|'-') term
  private static boolean arith_expr_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arith_expr_1_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = arith_expr_1_0_0(b, l + 1);
    r = r && term(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  // '+'|'-'
  private static boolean arith_expr_1_0_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "arith_expr_1_0_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, PLUS);
    if (!r) r = consumeToken(b, MINUS);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ASSERT_KEYWORD test [',' test]
  public static boolean assert_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assert_stmt")) return false;
    if (!nextTokenIs(b, ASSERT_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASSERT_KEYWORD);
    r = r && test(b, l + 1);
    r = r && assert_stmt_2(b, l + 1);
    exit_section_(b, m, ASSERT_STMT, r);
    return r;
  }

  // [',' test]
  private static boolean assert_stmt_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assert_stmt_2")) return false;
    assert_stmt_2_0(b, l + 1);
    return true;
  }

  // ',' test
  private static boolean assert_stmt_2_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "assert_stmt_2_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ",");
    r = r && test(b, l + 1);
    exit_section_(b, m, null, r);
    return r;
  }

  /* ********************************************************** */
  // ASYNC_KEYWORD funcdef
  public static boolean async_funcdef(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "async_funcdef")) return false;
    if (!nextTokenIs(b, ASYNC_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASYNC_KEYWORD);
    r = r && funcdef(b, l + 1);
    exit_section_(b, m, ASYNC_FUNCDEF, r);
    return r;
  }

  /* ********************************************************** */
  // ASYNC_KEYWORD (funcdef | with_stmt | for_stmt)
  public static boolean async_stmt(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "async_stmt")) return false;
    if (!nextTokenIs(b, ASYNC_KEYWORD)) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, ASYNC_KEYWORD);
    r = r && async_stmt_1(b, l + 1);
    exit_section_(b, m, ASYNC_STMT, r);
    return r;
  }

  // funcdef | with_stmt | for_stmt
  private static boolean async_stmt_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "async_stmt_1")) return false;
    boolean r;
    r = funcdef(b, l + 1);
    if (!r) r = with_stmt(b, l + 1);
    if (!r) r = for_stmt(b, l + 1);
    return r;
  }

  /* ********************************************************** */
  // '(' [yield_expr|testlist_comp] ')' |
  //        '[' [testlist_comp] ']' |
  //        '{' [dictorsetmaker] '}' |
  //        NAME | NUMBER | STRING+ | '...' | NONE_KEYWORD | TRUE_KEYWORD | FALSE_KEYWORD
  public static boolean atom(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom")) return false;
    boolean r;
    Marker m = enter_section_(b, l, _NONE_, ATOM, "<atom>");
    r = atom_0(b, l + 1);
    if (!r) r = atom_1(b, l + 1);
    if (!r) r = atom_2(b, l + 1);
    if (!r) r = consumeToken(b, NAME);
    if (!r) r = consumeToken(b, NUMBER);
    if (!r) r = atom_5(b, l + 1);
    if (!r) r = consumeToken(b, "...");
    if (!r) r = consumeToken(b, NONE_KEYWORD);
    if (!r) r = consumeToken(b, TRUE_KEYWORD);
    if (!r) r = consumeToken(b, FALSE_KEYWORD);
    exit_section_(b, l, m, r, false, null);
    return r;
  }

  // '(' [yield_expr|testlist_comp] ')'
  private static boolean atom_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_0")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LPAR);
    r = r && atom_0_1(b, l + 1);
    r = r && consumeToken(b, RPAR);
    exit_section_(b, m, null, r);
    return r;
  }

  // [yield_expr|testlist_comp]
  private static boolean atom_0_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_0_1")) return false;
    atom_0_1_0(b, l + 1);
    return true;
  }

  // yield_expr|testlist_comp
  private static boolean atom_0_1_0(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_0_1_0")) return false;
    boolean r;
    r = yield_expr(b, l + 1);
    if (!r) r = testlist_comp(b, l + 1);
    return r;
  }

  // '[' [testlist_comp] ']'
  private static boolean atom_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_1")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACKET);
    r = r && atom_1_1(b, l + 1);
    r = r && consumeToken(b, RBRACKET);
    exit_section_(b, m, null, r);
    return r;
  }

  // [testlist_comp]
  private static boolean atom_1_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_1_1")) return false;
    testlist_comp(b, l + 1);
    return true;
  }

  // '{' [dictorsetmaker] '}'
  private static boolean atom_2(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_2")) return false;
    boolean r;
    Marker m = enter_section_(b);
    r = consumeToken(b, LBRACE);
    r = r && atom_2_1(b, l + 1);
    r = r && consumeToken(b, RBRACE);
    exit_section_(b, m, null, r);
    return r;
  }

  // [dictorsetmaker]
  private static boolean atom_2_1(PsiBuilder b, int l) {
    if (!recursion_guard_(b, l, "atom_2_1")) return false;
    dictorsetmaker(b, l + 1);
    return true;
  }
